Ensure file list items don't wrap

--- a/share/git-webui/webui/git-webui.scss
+++ b/share/git-webui/webui/git-webui.scss
@@ -468,5 +468,6 @@ body {
         margin: 0;
         padding: 0.3em;
         cursor: default;
+        white-space: nowrap;
     }
 }
